--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Chinese drama'
 - !lcc 'PL'
+- GITenberg
 title: 琵琶記
 url: http://www.gutenberg.org/ebooks/25246
